--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "3-modules.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.20"
   }
